19-compiler-interpreter/00-antlr4/00-calculator/Calc.g4
grammar Calc;

// TOKENS
MUL: '*';
DIV: '/';
ADD: '+';
SUB: '-';
NUMBER: [0-9]+;
WHITESPACE: [ \r\n\t]+ -> skip;

// Rules
start: expr EOF;
expr: expr op=('*'|'/') expr # MulDiv
    | expr op=('+'|'-') expr # AddSub
    | NUMBER                 # Number
    ;
